--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div id="root">
         <h1>{{message}}</h1>
-        <img src="" alt="">
+        <img :src="img" alt="">
     </div>
 
     <script src="javascript.js"></script>
